<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.aptera.githubcompanion.app.activities.RepositoryActivity">

    <!--Full Name-->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtFullNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/label_data_margin"
        android:text="@string/full_name_label"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtFullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtFullNameLabel"
        android:text="N/A"/>

    <!--Description-->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/label_data_margin"
        android:layout_below="@id/txtFullName"
        android:text="@string/description_label"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtDescriptionLabel"
        android:layout_below="@id/txtFullName"
        android:text="N/A"/>

    <!--Default Branch-->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtDefaultBranchLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/label_data_margin"
        android:layout_below="@id/txtDescription"
        android:text="@string/default_branch_label"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtDefaultBranch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtDefaultBranchLabel"
        android:layout_below="@id/txtDescription"
        android:text="N/A"/>

    <!--Open Issues-->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtOpenIssueCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/label_data_margin"
        android:layout_below="@id/txtDefaultBranch"
        android:text="@string/open_issues_label"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtOpenIssueCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtOpenIssueCountLabel"
        android:layout_below="@id/txtDefaultBranch"
        android:text="N/A"/>

    <!--Subscriber Count-->
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtSubscriberCountLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/label_data_margin"
        android:layout_below="@id/txtOpenIssueCount"
        android:text="@string/subscribers_label"/>
    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/txtSubscriberCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txtSubscriberCountLabel"
        android:layout_below="@id/txtOpenIssueCount"
        android:text="N/A"/>

</RelativeLayout>
